sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:7: error: not enough arguments for method ameneTrouLibreAuDepart: (primeHole: Int)Unit.
Unspecified value parameter primeHole.
  ameneTrouLibreAuDepart()
                        ^